[workspace]
resolver = "2"
members = ["example"]

[package]
name = "bevy_net"
version = "0.1.0"
authors = ["Valaphee <iam@valaphee.com>"]
description = "Networking for Bevy"
repository = "https://github.com/valaphee/bevy_net.git"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bevy = { path = "../bevy", default-features = false }

tokio = { version = "1.36", features = ["rt-multi-thread", "sync", "macros"] }
futures = "0.3"
byteorder = "1.5"
serde = "1.0"
bincode = "1.3"
wtransport = { version = "0.1", features = ["dangerous-configuration"] }
