[package]
name = "bevy_net"
version = "0.1.0"
authors = ["Valaphee <iam@valaphee.com>"]
description = "Networking for Bevy"
repository = "https://github.com/valaphee/bevy_net.git"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13", default-features = false }

serde = "1.0"
bincode = "1.3"
byteorder = "1.5"
tokio = { version = "1.36", features = ["rt-multi-thread", "sync", "macros"] }
futures = "0.3"
wtransport = { version = "0.1", features = ["dangerous-configuration"] }

[dev-dependencies]
bevy = { features = ["bevy_winit", "bevy_pbr", "ktx2", "zstd", "tonemapping_luts", "wayland", "serialize"] }
bevy_xpbd_3d = { version = "0.4" }
clap = { version = "4.5.2", features = ["derive"] }
rand = "0.8.5"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
