[package]
name = "bevy_net_example"
version = "0.1.0"
authors = ["Valaphee <iam@valaphee.com>"]
description = "Networking for Bevy example"
repository = "https://github.com/valaphee/bevy_net.git"
license = "Apache-2.0"
edition = "2021"

[dependencies]
bevy = { path = "../../bevy", default-features = false }
bevy_net = { path = ".." }
serde = "1.0"
tokio = { version = "1.36", features = [ "rt-multi-thread", "macros"] }
rand = "0.8.5"

[features]
client = [
    "bevy/bevy_winit",
    "bevy/bevy_pbr",
    "bevy/ktx2",
    "bevy/zstd",
    "bevy/tonemapping_luts",
    "bevy/wayland"
]
server = [
    "bevy/bevy_color"
]
